2012-01-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/gem.c (Hull): Improve performance.

	* magick/effect.c (DespeckleImage): Improve performance.

2012-01-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/effect.c (DespeckleImage): Using schedule(static,4)
	blocks any opportunity for speedup.  This was a performance
	regression.  Oops!

2012-01-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/magick_wand.c (MagickExtentImage): Added
	MagickExtentImage() to Wand API.  Resolves SourceForge issue
	#3471915 "MagickExtentImage in the Wand C API".

2012-01-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/export.c (ExportViewPixelArea): Break up implementation
	into subroutines to ease compilation.

2012-01-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/import.c (ImportViewPixelArea): Break up implementation
	into subroutines to ease compilation.

2012-01-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/studio.h: Use Magick prefixed macro names for ftruncate,
	mmap, and munmap in order to assure that introducing our macros
	does not cause trouble with system headers.

2011-12-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_cache.c (AcquireCacheNexus):
	MirrorVirtualPixelMethod was broken.

2011-12-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Improve configuration support for Open64 Compiler
	Suite: Version 4.2.5.2 compiler with OpenMP.

	* coders/tga.c (ReadTGAImage): Assume that 32-bit TGA files have
	an alpha channel, even if they are not marked as such.  Fixes
	SourceForge issue 3466908 "TGA with alpha".

	* configure.ac: Revert changeset eaa27346d8e9 which tried to avoid
	the OpenMP library being included multiple times because in some
	cases it is not included at all.

2011-12-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (VersionCommand): For MSVC builds, report if
	SSE or SSE2 was used in the build.
