@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020120115"
-#define public MagickPackageReleaseDate "snapshot-20120115"
+#define public MagickPackageVersionAddendum ".020120117"
+#define public MagickPackageReleaseDate "snapshot-20120117"
