@@ -111,7 +111,6 @@ ModuleAliases[] =
   MODULEALIAS("DCR","DCRAW"),
   MODULEALIAS("DCX","PCX"),
   MODULEALIAS("DNG","DCRAW"),
-  MODULEALIAS("EMF","WMF"),
   MODULEALIAS("EPDF","PDF"),
   MODULEALIAS("EPI","PS"),
   MODULEALIAS("EPS","PS"),
