@@ -36,6 +36,16 @@
 <div class="document">
 
 
+<p>2012-01-17  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>magick/module.c (ModuleAliases): EMF format is supported by EMF
+module and so mapping EMF to the WMF module caused EMF not to
+work.  Resolves SourceForge bug #3475147 &quot;emf files can not be
+opened&quot;.  Note that the EMF module only works for Microsoft
+Windows.</li>
+</ul>
+</blockquote>
 <p>2012-01-15  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
