@@ -1,3 +1,11 @@
+2012-01-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/module.c (ModuleAliases): EMF format is supported by EMF
+	module and so mapping EMF to the WMF module caused EMF not to
+	work.  Resolves SourceForge bug #3475147 "emf files can not be
+	opened".  Note that the EMF module only works for Microsoft
+	Windows.
+
 2012-01-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/gem.c (Hull): Improve performance.
